# friendly-platypus

./: README.md  column.py  components.py  example.py  pyproject.toml
friendly_platipus/: __init__.py  column_builder.py  enums.py  layout_builder.py  models.py  pdf_builder.py  row_builder.py
friendly_platypus/: __init__.py  buildables.py  enums.py  example.py  models.py  on_page_components.py  pdf_builder.py  pyproject.toml  requirements.txt  utils.py
