[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "friendly_platypus"
version = "0.1.0"
description = "A small layout helper library for ReportLab"
authors = [
  { name="Your Name", email="you@example.com" }
]
dependencies = [
  "reportlab>=4.0",
]